--- a/interface/style.css
+++ b/interface/style.css
@@ -1,4 +1,5 @@
-body,html,div {
+body,html {
+	background-color:#2e2e2e;
     font-family: 'Courier New';
 }
 
@@ -26,7 +27,7 @@ body,html,div {
   -moz-border-radius: 28;
   border-radius: 28px;
   font-family: Courier New;
-  color: #ffffff;
+  color: #000000;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
   text-decoration: none; 
@@ -41,6 +42,7 @@ body,html,div {
 }
 
 .off.active {
+  color: #eeeeee;
   background: #ff0000;
   border: solid #000000 2px;
 }
@@ -57,6 +59,7 @@ body,html,div {
 }
 
 .on.active {
+  color: #eeeeee;
   background: #007f00;
   border: solid #000000 2px;
 }
@@ -66,10 +69,23 @@ body,html,div {
 
 
 .mainContainer {
-    width: 700px;
+	width: 1100px;
+	max-width: 95%;
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.sectionContainer {
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+	float:left;
+	background-color: rgb(100, 100, 100);
+	margin: 5px;
+	padding: 10px;
+	width: 510px;
+	max-width: 95% !important;
 }
 
 .display {
